# AGameInThirtyDays

./: Cargo.toml  LICENSE  README.md
crates/game/: Cargo.toml
crates/game/src/: camera.rs  color32.rs  main.rs  renderer.rs
crates/game/src/renderer/: gfx.rs  gltf.rs  mesh.rs  text.rs
crates/gl_bindings/: Cargo.toml
crates/gl_bindings/examples/: hello_triangle.rs
crates/gl_bindings/src/: gl43.rs  lib.rs
