[workspace]
members = ["crates/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.lints.clippy]
nursery = "warn"
perf = "warn"
pedantic = "warn"
style = "warn"
complexity = "warn"
suspicious = "warn"
suspicious_docs = "allow"
missing_errors_doc = "allow"


[workspace.dependencies]
gl_bindings = { path = "crates/gl_bindings" }
glfw = "0.54.0"
anyhow = "1.0.79" 

# handy utils
log = "0.4.20"
env_logger = "0.10.1"
fontdue = "0.8.0"
image = { version="0.24.8", default-features=false, features=["png"]}
