[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw.workspace = true
env_logger.workspace = true
log.workspace = true
gl_bindings.workspace = true
anyhow.workspace = true
glam.workspace = true


[lints]
workspace = true
